---
title: Task
---

classDiagram
    direction LR

    class AbstractCategoryItemEntity {
        <<Abstract>>
    }

    class Task {
        -string name
        -Category category
        -Collection~TaskItem~ items
        +getName() string
        +setName(string)
        +count() int
        +addItem(TaskItem)
        +removeItem(TaskItem)
        +getItems() Collection~TaskItem~
    }

    class TaskItem {
        -string name
        -Task task
        -Collection~TaskItemMargin~ margins
        +getName() string
        +setName(string)
        +getTask() Task
        +setTask(Task)
        +addMargin(TaskItemMargin)
        +removeMargin(TaskItemMargin)
        +getMargins() Collection~TaskItemMargin~
    }

    class TaskItemMargin {
        -TaskItem taskItem
        -float minimum
        -float maximum
        -float value
        +getTaskItem() TaskItem
        +setTaskItem(TaskItem)
        +getMinimum() float
        +setMinimum(float)
        +getMaximum() float
        +setMaximum(float)
        +getValue() float
        +setValue(float)
    }

    class AbstractEntity {
        <<Abstract>>
    }
    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- Task
    AbstractCategoryItemEntity <|-- Task
    AbstractCategoryItemEntity "1" <--> "1" Category
    Task "0" --* "*" TaskItem
    TaskItem "0" --* "*" TaskItemMargin
    Category "0" --> "*" Group

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click AbstractCategoryItemEntity call nodeCallback()
    click Category call nodeCallback()
    click Group call nodeCallback()
